// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`connectedEvidence snapshot, seven flag states > all off 1`] = `
{
  "AFG": "(absent)",
  "AGO": "(absent)",
  "ALB": "(absent)",
  "AND": "(absent)",
  "ARE": "(absent)",
  "ARG": "(absent)",
  "ARM": "(absent)",
  "ATG": "(absent)",
  "AUS": "(absent)",
  "AUT": "(absent)",
  "AZE": "(absent)",
  "BDI": "(absent)",
  "BEL": "(absent)",
  "BEN": "(absent)",
  "BFA": "(absent)",
  "BGD": "(absent)",
  "BGR": "(absent)",
  "BHR": "(absent)",
  "BHS": "(absent)",
  "BIH": "(absent)",
  "BLR": "(absent)",
  "BLZ": "(absent)",
  "BOL": "(absent)",
  "BRA": "(absent)",
  "BRB": "(absent)",
  "BRN": "(absent)",
  "BTN": "(absent)",
  "BWA": "(absent)",
  "CAF": "(absent)",
  "CAN": "(absent)",
  "CHE": "(absent)",
  "CHL": "(absent)",
  "CHN": "(absent)",
  "CIV": "(absent)",
  "CMR": "(absent)",
  "COD": "(absent)",
  "COG": "(absent)",
  "COL": "(absent)",
  "COM": "(absent)",
  "CPV": "(absent)",
  "CRI": "(absent)",
  "CUB": "(absent)",
  "CYP": "(absent)",
  "CZE": "(absent)",
  "DEU": "(absent)",
  "DJI": "(absent)",
  "DMA": "(absent)",
  "DNK": "(absent)",
  "DOM": "(absent)",
  "DZA": "(absent)",
  "ECU": "(absent)",
  "EGY": "(absent)",
  "ERI": "(absent)",
  "ESP": "(absent)",
  "EST": "(absent)",
  "ETH": "(absent)",
  "EUU": "(absent)",
  "FIN": "(absent)",
  "FJI": "(absent)",
  "FRA": "(absent)",
  "FSM": "(absent)",
  "GAB": "(absent)",
  "GBR": "(absent)",
  "GEO": "(absent)",
  "GHA": "(absent)",
  "GIN": "(absent)",
  "GMB": "(absent)",
  "GNB": "(absent)",
  "GNQ": "(absent)",
  "GRC": "(absent)",
  "GRD": "(absent)",
  "GTM": "(absent)",
  "GUY": "(absent)",
  "HND": "(absent)",
  "HRV": "(absent)",
  "HTI": "(absent)",
  "HUN": "(absent)",
  "IDN": "(absent)",
  "IND": "(absent)",
  "IRL": "(absent)",
  "IRN": "(absent)",
  "IRQ": "(absent)",
  "ISL": "(absent)",
  "ISR": "(absent)",
  "ITA": "(absent)",
  "JAM": "(absent)",
  "JOR": "(absent)",
  "JPN": "(absent)",
  "KAZ": "(absent)",
  "KEN": "(absent)",
  "KGZ": "(absent)",
  "KHM": "(absent)",
  "KIR": "(absent)",
  "KNA": "(absent)",
  "KOR": "(absent)",
  "KWT": "(absent)",
  "LAO": "(absent)",
  "LBN": "(absent)",
  "LBR": "(absent)",
  "LBY": "(absent)",
  "LCA": "(absent)",
  "LIE": "(absent)",
  "LKA": "(absent)",
  "LSO": "(absent)",
  "LTU": "(absent)",
  "LUX": "(absent)",
  "LVA": "(absent)",
  "MAR": "(absent)",
  "MCO": "(absent)",
  "MDA": "(absent)",
  "MDG": "(absent)",
  "MDV": "(absent)",
  "MEX": "(absent)",
  "MHL": "(absent)",
  "MKD": "(absent)",
  "MLI": "(absent)",
  "MLT": "(absent)",
  "MMR": "(absent)",
  "MNE": "(absent)",
  "MNG": "(absent)",
  "MOZ": "(absent)",
  "MRT": "(absent)",
  "MUS": "(absent)",
  "MWI": "(absent)",
  "MYS": "(absent)",
  "NAM": "(absent)",
  "NATO": "(absent)",
  "NER": "(absent)",
  "NGA": "(absent)",
  "NIC": "(absent)",
  "NLD": "(absent)",
  "NOR": "(absent)",
  "NPL": "(absent)",
  "NRU": "(absent)",
  "NZL": "(absent)",
  "OMN": "(absent)",
  "PAK": "(absent)",
  "PAN": "(absent)",
  "PER": "(absent)",
  "PHL": "(absent)",
  "PLW": "(absent)",
  "PNG": "(absent)",
  "POL": "(absent)",
  "PRK": "(absent)",
  "PRT": "(absent)",
  "PRY": "(absent)",
  "QAT": "(absent)",
  "ROU": "(absent)",
  "RUS": "(absent)",
  "RWA": "(absent)",
  "SAU": "(absent)",
  "SDN": "(absent)",
  "SEN": "(absent)",
  "SGP": "(absent)",
  "SLB": "(absent)",
  "SLE": "(absent)",
  "SLV": "(absent)",
  "SMR": "(absent)",
  "SOM": "(absent)",
  "SRB": "(absent)",
  "SSD": "(absent)",
  "STP": "(absent)",
  "SUR": "(absent)",
  "SVK": "(absent)",
  "SVN": "(absent)",
  "SWE": "(absent)",
  "SWZ": "(absent)",
  "SYC": "(absent)",
  "SYR": "(absent)",
  "TCD": "(absent)",
  "TGO": "(absent)",
  "THA": "(absent)",
  "TJK": "(absent)",
  "TKM": "(absent)",
  "TLS": "(absent)",
  "TON": "(absent)",
  "TTO": "(absent)",
  "TUN": "(absent)",
  "TUR": "(absent)",
  "TUV": "(absent)",
  "TZA": "(absent)",
  "UGA": "(absent)",
  "UKR": "(absent)",
  "UNK": "(absent)",
  "URY": "(absent)",
  "USA": "(absent)",
  "UZB": "(absent)",
  "VAT": "(absent)",
  "VCT": "(absent)",
  "VEN": "(absent)",
  "VNM": "(absent)",
  "VUT": "(absent)",
  "WSM": "(absent)",
  "YEM": "(absent)",
  "ZAF": "(absent)",
  "ZMB": "(absent)",
  "ZWE": "(absent)",
}
`;

exports[`connectedEvidence snapshot, seven flag states > all on 1`] = `
{
  "AFG": "(absent)",
  "AGO": "(absent)",
  "ALB": "(absent)",
  "AND": "(absent)",
  "ARE": [
    "dates own dates | 2 dates on its migration timeline, 2025 to 2026. | 2 | 2026-06-25 |  | Compare with other places -> /target-dates?in=ARE ; Set against how long data must stay secret -> /prepare/exposure?j=ARE",
  ],
  "ARG": "(no-record)",
  "ARM": "(absent)",
  "ATG": "(absent)",
  "AUS": [
    "standards own cascade | Names post-quantum standards in 2 documents: FIPS 203 and FIPS 204. The earliest dates from October 2025. | 2 | 2026-10-05 |  | See Australia in the Standards Cascade -> /standards/cascade?sel=AUS",
    "dates own dates | 3 dates on its migration timeline, 2026 to 2030. | 3 | 2026-06-25 |  | Compare with other places -> /target-dates?in=AUS ; Set against how long data must stay secret -> /prepare/exposure?j=AUS",
  ],
  "AUT": [
    "guidance membership readiness | As an EU Member State, Austria is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap ; Compare with other places -> /target-dates?in=AUT ; Set against how long data must stay secret -> /prepare/exposure?j=EUU",
  ],
  "AZE": "(absent)",
  "BDI": "(absent)",
  "BEL": [
    "dates own dates | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-25 |  | Compare with other places -> /target-dates?in=BEL ; Set against how long data must stay secret -> /prepare/exposure?j=BEL",
    "guidance membership readiness | As an EU Member State, Belgium is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "BEN": "(absent)",
  "BFA": "(absent)",
  "BGD": "(absent)",
  "BGR": [
    "guidance membership readiness | As an EU Member State, Bulgaria is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap ; Compare with other places -> /target-dates?in=BGR ; Set against how long data must stay secret -> /prepare/exposure?j=EUU",
  ],
  "BHR": "(no-record)",
  "BHS": "(absent)",
  "BIH": "(absent)",
  "BLR": "(absent)",
  "BLZ": "(absent)",
  "BOL": "(absent)",
  "BRA": [
    "dates own dates | 2 dates on its migration timeline, all in 2026. | 2 | 2026-06-14 |  | Compare with other places -> /target-dates?in=BRA ; Set against how long data must stay secret -> /prepare/exposure?j=BRA",
  ],
  "BRB": "(absent)",
  "BRN": "(no-record)",
  "BTN": "(absent)",
  "BWA": "(absent)",
  "CAF": "(absent)",
  "CAN": [
    "standards own cascade | Names post-quantum standards in 2 documents: FIPS 203, FIPS 204, FIPS 205 and NIST SP 800-208. The earliest dates from July 2024. | 2 | 2026-10-05 |  | See Canada in the Standards Cascade -> /standards/cascade?sel=CAN",
    "dates own dates | 3 dates on its migration timeline, 2026 to 2035. | 3 | 2026-06-25 |  | Compare with other places -> /target-dates?in=CAN ; Set against how long data must stay secret -> /prepare/exposure?j=CAN",
    "guidance own readiness | Publishes the Canadian roadmap, quoted in 7 actions of the Readiness Check. | 7 | 2026-10-01 |  | Read the guide -> /prepare/guides/ca-roadmap ; Mark these actions -> /prepare/check#f=ca-roadmap",
  ],
  "CHE": [
    "dates own dates | 4 dates on its migration timeline, 2025 to 2029. | 4 | no date |  | Compare with other places -> /target-dates?in=CHE",
  ],
  "CHL": "(no-record)",
  "CHN": [
    "standards own cascade | Runs its own post-quantum process, NGCC. The earliest Atlas record of it dates from February 2025. |  | 2026-10-05 |  | See China's own process in the Standards Cascade -> /standards/cascade?sel=CHN&fork=1",
  ],
  "CIV": "(absent)",
  "CMR": "(absent)",
  "COD": "(absent)",
  "COG": "(absent)",
  "COL": "(absent)",
  "COM": "(absent)",
  "CPV": "(absent)",
  "CRI": "(absent)",
  "CUB": "(absent)",
  "CYP": [
    "dates own dates | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-14 |  | Compare with other places -> /target-dates?in=CYP ; Set against how long data must stay secret -> /prepare/exposure?j=CYP",
    "guidance membership readiness | As an EU Member State, Cyprus is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "CZE": [
    "dates own dates | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-25 |  | Compare with other places -> /target-dates?in=CZE ; Set against how long data must stay secret -> /prepare/exposure?j=CZE",
    "guidance membership readiness | As an EU Member State, Czechia is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "DEU": [
    "standards own cascade | Names post-quantum standards in 3 documents: FIPS 203, FIPS 204, FIPS 205 and NIST SP 800-208. It also names HQC (selected, not yet published). The earliest, from May 2021, names the algorithm behind FIPS 203 under its earlier name, CRYSTALS-Kyber. | 3 | 2026-10-05 |  | See Germany in the Standards Cascade -> /standards/cascade?sel=DEU",
    "dates own dates | 4 dates on its migration timeline, 2026 to 2035. | 4 | 2026-06-25 |  | Compare with other places -> /target-dates?in=DEU ; Set against how long data must stay secret -> /prepare/exposure?j=DEU",
    "dates own exposure | Periods the Exposure Clock has read for Germany: tax records, identity and civil registry data, classified government information and financial transaction records. |  | 2026-10-04 | [tax records -> /prepare/exposure?c=tax-records&j=DEU] [identity and civil registry data -> /prepare/exposure?c=identity-registry&j=DEU] [classified government information -> /prepare/exposure?c=classified-government&j=DEU] [financial transaction records -> /prepare/exposure?c=financial-transactions&j=DEU] | ",
    "guidance membership readiness | As an EU Member State, Germany is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "DJI": "(no-record)",
  "DMA": "(absent)",
  "DNK": [
    "dates own dates | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-25 |  | Compare with other places -> /target-dates?in=DNK ; Set against how long data must stay secret -> /prepare/exposure?j=DNK",
    "guidance membership readiness | As an EU Member State, Denmark is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "DOM": "(absent)",
  "DZA": "(absent)",
  "ECU": "(absent)",
  "EGY": "(absent)",
  "ERI": "(absent)",
  "ESP": [
    "dates own dates | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-25 |  | Compare with other places -> /target-dates?in=ESP ; Set against how long data must stay secret -> /prepare/exposure?j=ESP",
    "dates own exposure | Periods the Exposure Clock has read for Spain: citizen health records and law enforcement case files. |  | 2026-10-04 | [citizen health records -> /prepare/exposure?c=citizen-health-records&j=ESP] [law enforcement case files -> /prepare/exposure?c=law-enforcement&j=ESP] | ",
    "guidance membership readiness | As an EU Member State, Spain is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "EST": [
    "guidance membership readiness | As an EU Member State, Estonia is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap ; Compare with other places -> /target-dates?in=EST ; Set against how long data must stay secret -> /prepare/exposure?j=EUU",
  ],
  "ETH": "(absent)",
  "EUU": [
    "standards own cascade | Names post-quantum standards in 4 documents: FIPS 203, FIPS 204, FIPS 205, NIST SP 800-208 and ETSI TS 103 744. It also names FIPS 206 and HQC (selected, not yet published), and NIST IR 8547 (initial public draft). The earliest, from May 2021, names the algorithms behind FIPS 203, FIPS 204 and FIPS 205 under their earlier names, Kyber, Dilithium and SPHINCS+. | 4 | 2026-10-05 |  | See the European Union in the Standards Cascade -> /standards/cascade?sel=EUU",
    "dates own dates | 3 target dates in the EU roadmap it publishes, 2026 to 2035. | 3 | 2026-10-01 |  | Compare with other places -> /target-dates?in=EUU ; Set against how long data must stay secret -> /prepare/exposure?j=EUU",
    "dates own exposure | Periods the Exposure Clock has read for the European Union: diplomatic communications and financial transaction records. |  | 2026-10-04 | [diplomatic communications -> /prepare/exposure?c=diplomatic&j=EUU] [financial transaction records -> /prepare/exposure?c=financial-transactions&j=EUU] | ",
    "guidance own readiness | Publishes the EU roadmap, quoted in 12 actions of the Readiness Check. | 12 | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "FIN": [
    "dates own dates | 3 dates on its migration timeline, 2026 to 2035. | 3 | 2026-06-25 |  | Compare with other places -> /target-dates?in=FIN ; Set against how long data must stay secret -> /prepare/exposure?j=FIN",
    "guidance membership readiness | As an EU Member State, Finland is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "FJI": "(absent)",
  "FRA": [
    "standards own cascade | Names post-quantum standards in 3 documents: FIPS 203, FIPS 204, FIPS 205 and NIST SP 800-208. It also names FIPS 206 and HQC (selected, not yet published). The earliest, from January 2022, names the algorithms behind FIPS 203 and FIPS 204 under their earlier names, Kyber and Dilithium. | 3 | 2026-10-05 |  | See France in the Standards Cascade -> /standards/cascade?sel=FRA",
    "dates own dates | 3 dates on its migration timeline, 2022 to 2035. | 3 | 2026-06-25 |  | Compare with other places -> /target-dates?in=FRA ; Set against how long data must stay secret -> /prepare/exposure?j=FRA",
    "dates own exposure | Periods the Exposure Clock has read for France: citizen health records, identity and civil registry data, classified government information, diplomatic communications and law enforcement case files. |  | 2026-10-04 | [citizen health records -> /prepare/exposure?c=citizen-health-records&j=FRA] [identity and civil registry data -> /prepare/exposure?c=identity-registry&j=FRA] [classified government information -> /prepare/exposure?c=classified-government&j=FRA] [diplomatic communications -> /prepare/exposure?c=diplomatic&j=FRA] [law enforcement case files -> /prepare/exposure?c=law-enforcement&j=FRA] | ",
    "guidance own readiness | Publishes the ANSSI FAQ, quoted in 2 actions of the Readiness Check. | 2 | 2026-10-01 |  | Read the guide -> /prepare/guides/anssi-faq ; Mark these actions -> /prepare/check#f=anssi-faq",
    "guidance membership readiness | As an EU Member State, France is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "FSM": "(absent)",
  "GAB": "(absent)",
  "GBR": [
    "standards own cascade | Names post-quantum standards in 2 documents: FIPS 203, FIPS 204, FIPS 205 and NIST SP 800-208. The earliest dates from August 2024. | 2 | 2026-10-05 |  | See the United Kingdom in the Standards Cascade -> /standards/cascade?sel=GBR",
    "dates own dates | 3 dates on its migration timeline, 2028 to 2035. | 3 | 2026-06-25 |  | Compare with other places -> /target-dates?in=GBR ; Set against how long data must stay secret -> /prepare/exposure?j=GBR",
    "dates own exposure | Periods the Exposure Clock has read for the United Kingdom: law enforcement case files. |  | 2026-10-04 | [law enforcement case files -> /prepare/exposure?c=law-enforcement&j=GBR] | ",
    "guidance own readiness | Publishes the NCSC timelines, quoted in 11 actions of the Readiness Check. | 11 | 2026-10-01 |  | Read the guide -> /prepare/guides/ncsc-timelines ; Mark these actions -> /prepare/check#f=ncsc-timelines",
    "guidance own readiness | Publishes the NCSC next steps, quoted in 1 action of the Readiness Check. | 1 | 2026-10-01 |  | Read the guide -> /prepare/guides/ncsc-next-steps ; Mark these actions -> /prepare/check#f=ncsc-next-steps",
  ],
  "GEO": "(absent)",
  "GHA": "(absent)",
  "GIN": "(absent)",
  "GMB": "(absent)",
  "GNB": "(absent)",
  "GNQ": "(absent)",
  "GRC": [
    "dates own dates | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-25 |  | Compare with other places -> /target-dates?in=GRC ; Set against how long data must stay secret -> /prepare/exposure?j=GRC",
    "guidance membership readiness | As an EU Member State, Greece is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "GRD": "(absent)",
  "GTM": "(absent)",
  "GUY": "(no-record)",
  "HND": "(absent)",
  "HRV": [
    "dates own dates | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-14 |  | Compare with other places -> /target-dates?in=HRV ; Set against how long data must stay secret -> /prepare/exposure?j=HRV",
    "guidance membership readiness | As an EU Member State, Croatia is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "HTI": "(absent)",
  "HUN": [
    "dates own dates | 3 dates on its migration timeline, 2025 to 2035. | 3 | 2026-06-25 |  | Compare with other places -> /target-dates?in=HUN ; Set against how long data must stay secret -> /prepare/exposure?j=HUN",
    "guidance membership readiness | As an EU Member State, Hungary is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "IDN": "(no-record)",
  "IND": [
    "dates own dates | 3 dates on its migration timeline, 2029 to 2035. | 3 | 2026-06-25 |  | Compare with other places -> /target-dates?in=IND ; Set against how long data must stay secret -> /prepare/exposure?j=IND",
  ],
  "IRL": [
    "dates own dates | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-14 |  | Compare with other places -> /target-dates?in=IRL ; Set against how long data must stay secret -> /prepare/exposure?j=IRL",
    "guidance membership readiness | As an EU Member State, Ireland is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "IRN": "(absent)",
  "IRQ": "(absent)",
  "ISL": "(absent)",
  "ISR": [
    "dates own dates | 1 date on its migration timeline: 2026. | 1 | 2026-06-25 |  | Compare with other places -> /target-dates?in=ISR ; Set against how long data must stay secret -> /prepare/exposure?j=ISR",
  ],
  "ITA": [
    "dates own dates | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-25 |  | Compare with other places -> /target-dates?in=ITA ; Set against how long data must stay secret -> /prepare/exposure?j=ITA",
    "dates own exposure | Periods the Exposure Clock has read for Italy: citizen health records, diplomatic communications and law enforcement case files. |  | 2026-10-04 | [citizen health records -> /prepare/exposure?c=citizen-health-records&j=ITA] [diplomatic communications -> /prepare/exposure?c=diplomatic&j=ITA] [law enforcement case files -> /prepare/exposure?c=law-enforcement&j=ITA] | ",
    "guidance membership readiness | As an EU Member State, Italy is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "JAM": "(absent)",
  "JOR": "(absent)",
  "JPN": [
    "standards own cascade | Names post-quantum standards in 6 documents: FIPS 203, FIPS 204, FIPS 205 and NIST SP 800-208. It also names FIPS 206 and HQC (selected, not yet published), and NIST IR 8547 (initial public draft). The earliest, from November 2021, names the algorithm behind FIPS 205 under its earlier name, SPHINCS+. | 6 | 2026-10-05 |  | See Japan in the Standards Cascade -> /standards/cascade?sel=JPN",
    "dates own dates | 2 dates on its migration timeline, 2026 to 2035. | 2 | 2026-06-25 |  | Compare with other places -> /target-dates?in=JPN ; Set against how long data must stay secret -> /prepare/exposure?j=JPN",
  ],
  "KAZ": "(absent)",
  "KEN": "(absent)",
  "KGZ": "(absent)",
  "KHM": "(absent)",
  "KIR": "(absent)",
  "KNA": "(absent)",
  "KOR": [
    "standards own cascade | Names post-quantum standards in 3 documents: FIPS 203, FIPS 204 and FIPS 205. It also names FIPS 206 (selected, not yet published). The earliest, from December 2021, names the algorithms behind FIPS 203 and FIPS 206 under their earlier names, Kyber and FALCON. | 3 | 2026-10-05 |  | See South Korea in the Standards Cascade -> /standards/cascade?sel=KOR",
    "standards own cascade | Runs its own post-quantum process, KpqC. The earliest Atlas record of it dates from January 2025. |  | 2026-10-05 |  | See South Korea's own process in the Standards Cascade -> /standards/cascade?sel=KOR&fork=1",
    "dates own dates | 3 dates on its migration timeline, 2025 to 2026. | 3 | 2026-06-25 |  | Compare with other places -> /target-dates?in=KOR ; Set against how long data must stay secret -> /prepare/exposure?j=KOR",
  ],
  "KWT": "(absent)",
  "LAO": "(absent)",
  "LBN": "(absent)",
  "LBR": "(absent)",
  "LBY": "(absent)",
  "LCA": "(absent)",
  "LIE": "(absent)",
  "LKA": "(absent)",
  "LSO": "(absent)",
  "LTU": [
    "dates own dates | 3 dates on its migration timeline, 2027 to 2036. | 3 | 2026-06-25 |  | Compare with other places -> /target-dates?in=LTU ; Set against how long data must stay secret -> /prepare/exposure?j=LTU",
    "guidance membership readiness | As an EU Member State, Lithuania is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "LUX": [
    "dates own dates | 1 date on its migration timeline: 2030. | 1 | 2026-06-25 |  | Compare with other places -> /target-dates?in=LUX ; Set against how long data must stay secret -> /prepare/exposure?j=LUX",
    "guidance membership readiness | As an EU Member State, Luxembourg is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "LVA": [
    "dates own dates | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-14 |  | Compare with other places -> /target-dates?in=LVA ; Set against how long data must stay secret -> /prepare/exposure?j=LVA",
    "guidance membership readiness | As an EU Member State, Latvia is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "MAR": "(absent)",
  "MCO": "(absent)",
  "MDA": "(absent)",
  "MDG": "(absent)",
  "MDV": "(absent)",
  "MEX": "(absent)",
  "MHL": "(absent)",
  "MKD": "(absent)",
  "MLI": "(absent)",
  "MLT": [
    "guidance membership readiness | As an EU Member State, Malta is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap ; Compare with other places -> /target-dates?in=MLT ; Set against how long data must stay secret -> /prepare/exposure?j=EUU",
  ],
  "MMR": "(absent)",
  "MNE": "(absent)",
  "MNG": "(absent)",
  "MOZ": "(absent)",
  "MRT": "(absent)",
  "MUS": "(absent)",
  "MWI": "(absent)",
  "MYS": "(no-record)",
  "NAM": "(absent)",
  "NATO": [
    "dates own dates | 2 dates on its migration timeline, 2022 to 2024. | 2 | no date |  | Compare with other places -> /target-dates?in=NATO",
  ],
  "NER": "(absent)",
  "NGA": "(absent)",
  "NIC": "(absent)",
  "NLD": [
    "standards own cascade | Names post-quantum standards in 4 documents: FIPS 203, FIPS 204, FIPS 205 and NIST SP 800-208. It also names FIPS 206 and HQC (selected, not yet published). The earliest dates from August 2024. | 4 | 2026-10-05 |  | See the Netherlands in the Standards Cascade -> /standards/cascade?sel=NLD",
    "dates own dates | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-25 |  | Compare with other places -> /target-dates?in=NLD ; Set against how long data must stay secret -> /prepare/exposure?j=NLD",
    "guidance own readiness | Publishes the Dutch Handbook, quoted in 5 actions of the Readiness Check. | 5 | 2026-10-01 |  | Read the guide -> /prepare/guides/nl-handbook ; Mark these actions -> /prepare/check#f=nl-handbook",
    "guidance membership readiness | As an EU Member State, the Netherlands is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "NOR": [
    "dates own dates | 3 dates on its migration timeline, 2017 to 2025. | 3 | 2026-06-25 |  | Compare with other places -> /target-dates?in=NOR ; Set against how long data must stay secret -> /prepare/exposure?j=NOR",
  ],
  "NPL": "(absent)",
  "NRU": "(absent)",
  "NZL": [
    "dates own dates | 1 date on its migration timeline: 2026. | 1 | 2026-06-25 |  | Compare with other places -> /target-dates?in=NZL ; Set against how long data must stay secret -> /prepare/exposure?j=NZL",
  ],
  "OMN": "(absent)",
  "PAK": "(absent)",
  "PAN": "(absent)",
  "PER": "(absent)",
  "PHL": "(absent)",
  "PLW": "(absent)",
  "PNG": "(absent)",
  "POL": [
    "dates own dates | 3 dates on its migration timeline, 2026 to 2035. | 3 | 2026-06-25 |  | Compare with other places -> /target-dates?in=POL ; Set against how long data must stay secret -> /prepare/exposure?j=POL",
    "guidance membership readiness | As an EU Member State, Poland is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "PRK": "(absent)",
  "PRT": [
    "dates own dates | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-25 |  | Compare with other places -> /target-dates?in=PRT ; Set against how long data must stay secret -> /prepare/exposure?j=PRT",
    "guidance membership readiness | As an EU Member State, Portugal is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "PRY": "(absent)",
  "QAT": "(absent)",
  "ROU": [
    "dates own dates | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-25 |  | Compare with other places -> /target-dates?in=ROU ; Set against how long data must stay secret -> /prepare/exposure?j=ROU",
    "guidance membership readiness | As an EU Member State, Romania is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "RUS": [
    "standards own cascade | Runs its own post-quantum process, Kodieum and Shipovnik. The earliest Atlas record of it dates from March 2024 and concerns Kodieum. |  | 2026-10-05 |  | See Russia's own process in the Standards Cascade -> /standards/cascade?sel=RUS&fork=1",
  ],
  "RWA": "(absent)",
  "SAU": "(no-record)",
  "SDN": "(absent)",
  "SEN": "(absent)",
  "SGP": [
    "standards own cascade | Names post-quantum standards in 2 documents: FIPS 203, FIPS 204, FIPS 205 and NIST SP 800-208. It also names FIPS 206 and HQC (selected, not yet published). The earliest, from February 2024, names the algorithms behind FIPS 203, FIPS 204, FIPS 205 and FIPS 206 under their earlier names, CRYSTALS-Kyber, CRYSTALS-Dilithium, SPHINCS+ and FALCON. | 2 | 2026-10-05 |  | See Singapore in the Standards Cascade -> /standards/cascade?sel=SGP",
    "dates own dates | 3 dates on its migration timeline, 2023 to 2026. | 3 | 2026-06-25 |  | Compare with other places -> /target-dates?in=SGP ; Set against how long data must stay secret -> /prepare/exposure?j=SGP",
  ],
  "SLB": "(absent)",
  "SLE": "(absent)",
  "SLV": "(absent)",
  "SMR": "(absent)",
  "SOM": "(absent)",
  "SRB": "(absent)",
  "SSD": "(absent)",
  "STP": "(absent)",
  "SUR": "(absent)",
  "SVK": [
    "guidance membership readiness | As an EU Member State, Slovakia is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap ; Compare with other places -> /target-dates?in=SVK ; Set against how long data must stay secret -> /prepare/exposure?j=EUU",
  ],
  "SVN": [
    "dates own dates | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-25 |  | Compare with other places -> /target-dates?in=SVN ; Set against how long data must stay secret -> /prepare/exposure?j=SVN",
    "guidance membership readiness | As an EU Member State, Slovenia is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "SWE": [
    "dates own dates | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-25 |  | Compare with other places -> /target-dates?in=SWE ; Set against how long data must stay secret -> /prepare/exposure?j=SWE",
    "guidance membership readiness | As an EU Member State, Sweden is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "SWZ": "(absent)",
  "SYC": "(absent)",
  "SYR": "(absent)",
  "TCD": "(absent)",
  "TGO": "(absent)",
  "THA": [
    "dates own dates | 5 dates on its migration timeline, 2026 to 2035. | 5 | 2026-06-25 |  | Compare with other places -> /target-dates?in=THA ; Set against how long data must stay secret -> /prepare/exposure?j=THA",
  ],
  "TJK": "(absent)",
  "TKM": "(absent)",
  "TLS": "(absent)",
  "TON": "(absent)",
  "TTO": "(absent)",
  "TUN": "(absent)",
  "TUR": "(no-record)",
  "TUV": "(absent)",
  "TZA": "(absent)",
  "UGA": "(absent)",
  "UKR": "(no-record)",
  "UNK": "(absent)",
  "URY": "(no-record)",
  "USA": [
    "standards own cascade | Names post-quantum standards in 11 documents: FIPS 203, FIPS 204, FIPS 205 and NIST SP 800-208. It also names FIPS 206 and HQC (selected, not yet published), and NIST IR 8547 (initial public draft). The earliest dates from October 2021. | 11 | 2026-10-05 |  | See the United States in the Standards Cascade -> /standards/cascade?sel=USA",
    "dates own exposure | 4 dates on its migration timeline, 2025 to 2035. | 4 | 2026-06-25 |  | Set against how long data must stay secret -> /prepare/exposure?j=USA",
    "dates own exposure | Periods the Exposure Clock has read for the United States: citizen health records and classified government information. |  | 2026-10-04 | [citizen health records -> /prepare/exposure?c=citizen-health-records&j=USA] [classified government information -> /prepare/exposure?c=classified-government&j=USA] | ",
    "guidance own readiness | Publishes the CISA, NSA and NIST factsheet, quoted in 3 actions of the Readiness Check. | 3 | 2026-10-01 |  | Read the guide -> /prepare/guides/cisa-factsheet ; Mark these actions -> /prepare/check#f=cisa-factsheet",
  ],
  "UZB": "(absent)",
  "VAT": "(absent)",
  "VCT": "(absent)",
  "VEN": "(absent)",
  "VNM": [
    "dates own dates | 3 dates on its migration timeline, 2026 to 2030. | 3 | 2026-06-25 |  | Compare with other places -> /target-dates?in=VNM ; Set against how long data must stay secret -> /prepare/exposure?j=VNM",
  ],
  "VUT": "(absent)",
  "WSM": "(absent)",
  "YEM": "(absent)",
  "ZAF": "(absent)",
  "ZMB": "(absent)",
  "ZWE": "(absent)",
}
`;

exports[`connectedEvidence snapshot, seven flag states > cascade alone 1`] = `
{
  "AFG": "(absent)",
  "AGO": "(absent)",
  "ALB": "(absent)",
  "AND": "(absent)",
  "ARE": "(no-record)",
  "ARG": "(no-record)",
  "ARM": "(absent)",
  "ATG": "(absent)",
  "AUS": [
    "standards own cascade | Names post-quantum standards in 2 documents: FIPS 203 and FIPS 204. The earliest dates from October 2025. | 2 | 2026-10-05 |  | See Australia in the Standards Cascade -> /standards/cascade?sel=AUS",
  ],
  "AUT": "(absent)",
  "AZE": "(absent)",
  "BDI": "(absent)",
  "BEL": "(no-record)",
  "BEN": "(absent)",
  "BFA": "(absent)",
  "BGD": "(absent)",
  "BGR": "(absent)",
  "BHR": "(no-record)",
  "BHS": "(absent)",
  "BIH": "(absent)",
  "BLR": "(absent)",
  "BLZ": "(absent)",
  "BOL": "(absent)",
  "BRA": "(no-record)",
  "BRB": "(absent)",
  "BRN": "(no-record)",
  "BTN": "(absent)",
  "BWA": "(absent)",
  "CAF": "(absent)",
  "CAN": [
    "standards own cascade | Names post-quantum standards in 2 documents: FIPS 203, FIPS 204, FIPS 205 and NIST SP 800-208. The earliest dates from July 2024. | 2 | 2026-10-05 |  | See Canada in the Standards Cascade -> /standards/cascade?sel=CAN",
  ],
  "CHE": "(no-record)",
  "CHL": "(no-record)",
  "CHN": [
    "standards own cascade | Runs its own post-quantum process, NGCC. The earliest Atlas record of it dates from February 2025. |  | 2026-10-05 |  | See China's own process in the Standards Cascade -> /standards/cascade?sel=CHN&fork=1",
  ],
  "CIV": "(absent)",
  "CMR": "(absent)",
  "COD": "(absent)",
  "COG": "(absent)",
  "COL": "(absent)",
  "COM": "(absent)",
  "CPV": "(absent)",
  "CRI": "(absent)",
  "CUB": "(absent)",
  "CYP": "(no-record)",
  "CZE": "(no-record)",
  "DEU": [
    "standards own cascade | Names post-quantum standards in 3 documents: FIPS 203, FIPS 204, FIPS 205 and NIST SP 800-208. It also names HQC (selected, not yet published). The earliest, from May 2021, names the algorithm behind FIPS 203 under its earlier name, CRYSTALS-Kyber. | 3 | 2026-10-05 |  | See Germany in the Standards Cascade -> /standards/cascade?sel=DEU",
  ],
  "DJI": "(no-record)",
  "DMA": "(absent)",
  "DNK": "(no-record)",
  "DOM": "(absent)",
  "DZA": "(absent)",
  "ECU": "(absent)",
  "EGY": "(absent)",
  "ERI": "(absent)",
  "ESP": "(no-record)",
  "EST": "(absent)",
  "ETH": "(absent)",
  "EUU": [
    "standards own cascade | Names post-quantum standards in 4 documents: FIPS 203, FIPS 204, FIPS 205, NIST SP 800-208 and ETSI TS 103 744. It also names FIPS 206 and HQC (selected, not yet published), and NIST IR 8547 (initial public draft). The earliest, from May 2021, names the algorithms behind FIPS 203, FIPS 204 and FIPS 205 under their earlier names, Kyber, Dilithium and SPHINCS+. | 4 | 2026-10-05 |  | See the European Union in the Standards Cascade -> /standards/cascade?sel=EUU",
  ],
  "FIN": "(no-record)",
  "FJI": "(absent)",
  "FRA": [
    "standards own cascade | Names post-quantum standards in 3 documents: FIPS 203, FIPS 204, FIPS 205 and NIST SP 800-208. It also names FIPS 206 and HQC (selected, not yet published). The earliest, from January 2022, names the algorithms behind FIPS 203 and FIPS 204 under their earlier names, Kyber and Dilithium. | 3 | 2026-10-05 |  | See France in the Standards Cascade -> /standards/cascade?sel=FRA",
  ],
  "FSM": "(absent)",
  "GAB": "(absent)",
  "GBR": [
    "standards own cascade | Names post-quantum standards in 2 documents: FIPS 203, FIPS 204, FIPS 205 and NIST SP 800-208. The earliest dates from August 2024. | 2 | 2026-10-05 |  | See the United Kingdom in the Standards Cascade -> /standards/cascade?sel=GBR",
  ],
  "GEO": "(absent)",
  "GHA": "(absent)",
  "GIN": "(absent)",
  "GMB": "(absent)",
  "GNB": "(absent)",
  "GNQ": "(absent)",
  "GRC": "(no-record)",
  "GRD": "(absent)",
  "GTM": "(absent)",
  "GUY": "(no-record)",
  "HND": "(absent)",
  "HRV": "(no-record)",
  "HTI": "(absent)",
  "HUN": "(no-record)",
  "IDN": "(no-record)",
  "IND": "(no-record)",
  "IRL": "(no-record)",
  "IRN": "(absent)",
  "IRQ": "(absent)",
  "ISL": "(absent)",
  "ISR": "(no-record)",
  "ITA": "(no-record)",
  "JAM": "(absent)",
  "JOR": "(absent)",
  "JPN": [
    "standards own cascade | Names post-quantum standards in 6 documents: FIPS 203, FIPS 204, FIPS 205 and NIST SP 800-208. It also names FIPS 206 and HQC (selected, not yet published), and NIST IR 8547 (initial public draft). The earliest, from November 2021, names the algorithm behind FIPS 205 under its earlier name, SPHINCS+. | 6 | 2026-10-05 |  | See Japan in the Standards Cascade -> /standards/cascade?sel=JPN",
  ],
  "KAZ": "(absent)",
  "KEN": "(absent)",
  "KGZ": "(absent)",
  "KHM": "(absent)",
  "KIR": "(absent)",
  "KNA": "(absent)",
  "KOR": [
    "standards own cascade | Names post-quantum standards in 3 documents: FIPS 203, FIPS 204 and FIPS 205. It also names FIPS 206 (selected, not yet published). The earliest, from December 2021, names the algorithms behind FIPS 203 and FIPS 206 under their earlier names, Kyber and FALCON. | 3 | 2026-10-05 |  | See South Korea in the Standards Cascade -> /standards/cascade?sel=KOR",
    "standards own cascade | Runs its own post-quantum process, KpqC. The earliest Atlas record of it dates from January 2025. |  | 2026-10-05 |  | See South Korea's own process in the Standards Cascade -> /standards/cascade?sel=KOR&fork=1",
  ],
  "KWT": "(absent)",
  "LAO": "(absent)",
  "LBN": "(absent)",
  "LBR": "(absent)",
  "LBY": "(absent)",
  "LCA": "(absent)",
  "LIE": "(absent)",
  "LKA": "(absent)",
  "LSO": "(absent)",
  "LTU": "(no-record)",
  "LUX": "(no-record)",
  "LVA": "(no-record)",
  "MAR": "(absent)",
  "MCO": "(absent)",
  "MDA": "(absent)",
  "MDG": "(absent)",
  "MDV": "(absent)",
  "MEX": "(absent)",
  "MHL": "(absent)",
  "MKD": "(absent)",
  "MLI": "(absent)",
  "MLT": "(absent)",
  "MMR": "(absent)",
  "MNE": "(absent)",
  "MNG": "(absent)",
  "MOZ": "(absent)",
  "MRT": "(absent)",
  "MUS": "(absent)",
  "MWI": "(absent)",
  "MYS": "(no-record)",
  "NAM": "(absent)",
  "NATO": "(no-record)",
  "NER": "(absent)",
  "NGA": "(absent)",
  "NIC": "(absent)",
  "NLD": [
    "standards own cascade | Names post-quantum standards in 4 documents: FIPS 203, FIPS 204, FIPS 205 and NIST SP 800-208. It also names FIPS 206 and HQC (selected, not yet published). The earliest dates from August 2024. | 4 | 2026-10-05 |  | See the Netherlands in the Standards Cascade -> /standards/cascade?sel=NLD",
  ],
  "NOR": "(no-record)",
  "NPL": "(absent)",
  "NRU": "(absent)",
  "NZL": "(no-record)",
  "OMN": "(absent)",
  "PAK": "(absent)",
  "PAN": "(absent)",
  "PER": "(absent)",
  "PHL": "(absent)",
  "PLW": "(absent)",
  "PNG": "(absent)",
  "POL": "(no-record)",
  "PRK": "(absent)",
  "PRT": "(no-record)",
  "PRY": "(absent)",
  "QAT": "(absent)",
  "ROU": "(no-record)",
  "RUS": [
    "standards own cascade | Runs its own post-quantum process, Kodieum and Shipovnik. The earliest Atlas record of it dates from March 2024 and concerns Kodieum. |  | 2026-10-05 |  | See Russia's own process in the Standards Cascade -> /standards/cascade?sel=RUS&fork=1",
  ],
  "RWA": "(absent)",
  "SAU": "(no-record)",
  "SDN": "(absent)",
  "SEN": "(absent)",
  "SGP": [
    "standards own cascade | Names post-quantum standards in 2 documents: FIPS 203, FIPS 204, FIPS 205 and NIST SP 800-208. It also names FIPS 206 and HQC (selected, not yet published). The earliest, from February 2024, names the algorithms behind FIPS 203, FIPS 204, FIPS 205 and FIPS 206 under their earlier names, CRYSTALS-Kyber, CRYSTALS-Dilithium, SPHINCS+ and FALCON. | 2 | 2026-10-05 |  | See Singapore in the Standards Cascade -> /standards/cascade?sel=SGP",
  ],
  "SLB": "(absent)",
  "SLE": "(absent)",
  "SLV": "(absent)",
  "SMR": "(absent)",
  "SOM": "(absent)",
  "SRB": "(absent)",
  "SSD": "(absent)",
  "STP": "(absent)",
  "SUR": "(absent)",
  "SVK": "(absent)",
  "SVN": "(no-record)",
  "SWE": "(no-record)",
  "SWZ": "(absent)",
  "SYC": "(absent)",
  "SYR": "(absent)",
  "TCD": "(absent)",
  "TGO": "(absent)",
  "THA": "(no-record)",
  "TJK": "(absent)",
  "TKM": "(absent)",
  "TLS": "(absent)",
  "TON": "(absent)",
  "TTO": "(absent)",
  "TUN": "(absent)",
  "TUR": "(no-record)",
  "TUV": "(absent)",
  "TZA": "(absent)",
  "UGA": "(absent)",
  "UKR": "(no-record)",
  "UNK": "(absent)",
  "URY": "(no-record)",
  "USA": [
    "standards own cascade | Names post-quantum standards in 11 documents: FIPS 203, FIPS 204, FIPS 205 and NIST SP 800-208. It also names FIPS 206 and HQC (selected, not yet published), and NIST IR 8547 (initial public draft). The earliest dates from October 2021. | 11 | 2026-10-05 |  | See the United States in the Standards Cascade -> /standards/cascade?sel=USA",
  ],
  "UZB": "(absent)",
  "VAT": "(absent)",
  "VCT": "(absent)",
  "VEN": "(absent)",
  "VNM": "(no-record)",
  "VUT": "(absent)",
  "WSM": "(absent)",
  "YEM": "(absent)",
  "ZAF": "(absent)",
  "ZMB": "(absent)",
  "ZWE": "(absent)",
}
`;

exports[`connectedEvidence snapshot, seven flag states > dates alone 1`] = `
{
  "AFG": "(absent)",
  "AGO": "(absent)",
  "ALB": "(absent)",
  "AND": "(absent)",
  "ARE": [
    "dates own dates | 2 dates on its migration timeline, 2025 to 2026. | 2 | 2026-06-25 |  | Compare with other places -> /target-dates?in=ARE",
  ],
  "ARG": "(no-record)",
  "ARM": "(absent)",
  "ATG": "(absent)",
  "AUS": [
    "dates own dates | 3 dates on its migration timeline, 2026 to 2030. | 3 | 2026-06-25 |  | Compare with other places -> /target-dates?in=AUS",
  ],
  "AUT": [
    "dates membership dates | As an EU Member State, Austria is addressed by the EU roadmap, with 3 target dates, 2026 to 2035. | 3 | 2026-10-01 |  | Compare with other places -> /target-dates?in=AUT",
  ],
  "AZE": "(absent)",
  "BDI": "(absent)",
  "BEL": [
    "dates own dates | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-25 |  | Compare with other places -> /target-dates?in=BEL",
  ],
  "BEN": "(absent)",
  "BFA": "(absent)",
  "BGD": "(absent)",
  "BGR": [
    "dates membership dates | As an EU Member State, Bulgaria is addressed by the EU roadmap, with 3 target dates, 2026 to 2035. | 3 | 2026-10-01 |  | Compare with other places -> /target-dates?in=BGR",
  ],
  "BHR": "(no-record)",
  "BHS": "(absent)",
  "BIH": "(absent)",
  "BLR": "(absent)",
  "BLZ": "(absent)",
  "BOL": "(absent)",
  "BRA": [
    "dates own dates | 2 dates on its migration timeline, all in 2026. | 2 | 2026-06-14 |  | Compare with other places -> /target-dates?in=BRA",
  ],
  "BRB": "(absent)",
  "BRN": "(no-record)",
  "BTN": "(absent)",
  "BWA": "(absent)",
  "CAF": "(absent)",
  "CAN": [
    "dates own dates | 3 dates on its migration timeline, 2026 to 2035. | 3 | 2026-06-25 |  | Compare with other places -> /target-dates?in=CAN",
  ],
  "CHE": [
    "dates own dates | 4 dates on its migration timeline, 2025 to 2029. | 4 | no date |  | Compare with other places -> /target-dates?in=CHE",
  ],
  "CHL": "(no-record)",
  "CHN": "(no-record)",
  "CIV": "(absent)",
  "CMR": "(absent)",
  "COD": "(absent)",
  "COG": "(absent)",
  "COL": "(absent)",
  "COM": "(absent)",
  "CPV": "(absent)",
  "CRI": "(absent)",
  "CUB": "(absent)",
  "CYP": [
    "dates own dates | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-14 |  | Compare with other places -> /target-dates?in=CYP",
  ],
  "CZE": [
    "dates own dates | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-25 |  | Compare with other places -> /target-dates?in=CZE",
  ],
  "DEU": [
    "dates own dates | 4 dates on its migration timeline, 2026 to 2035. | 4 | 2026-06-25 |  | Compare with other places -> /target-dates?in=DEU",
  ],
  "DJI": "(no-record)",
  "DMA": "(absent)",
  "DNK": [
    "dates own dates | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-25 |  | Compare with other places -> /target-dates?in=DNK",
  ],
  "DOM": "(absent)",
  "DZA": "(absent)",
  "ECU": "(absent)",
  "EGY": "(absent)",
  "ERI": "(absent)",
  "ESP": [
    "dates own dates | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-25 |  | Compare with other places -> /target-dates?in=ESP",
  ],
  "EST": [
    "dates membership dates | As an EU Member State, Estonia is addressed by the EU roadmap, with 3 target dates, 2026 to 2035. | 3 | 2026-10-01 |  | Compare with other places -> /target-dates?in=EST",
  ],
  "ETH": "(absent)",
  "EUU": [
    "dates own dates | 3 target dates in the EU roadmap it publishes, 2026 to 2035. | 3 | 2026-10-01 |  | Compare with other places -> /target-dates?in=EUU",
  ],
  "FIN": [
    "dates own dates | 3 dates on its migration timeline, 2026 to 2035. | 3 | 2026-06-25 |  | Compare with other places -> /target-dates?in=FIN",
  ],
  "FJI": "(absent)",
  "FRA": [
    "dates own dates | 3 dates on its migration timeline, 2022 to 2035. | 3 | 2026-06-25 |  | Compare with other places -> /target-dates?in=FRA",
  ],
  "FSM": "(absent)",
  "GAB": "(absent)",
  "GBR": [
    "dates own dates | 3 dates on its migration timeline, 2028 to 2035. | 3 | 2026-06-25 |  | Compare with other places -> /target-dates?in=GBR",
  ],
  "GEO": "(absent)",
  "GHA": "(absent)",
  "GIN": "(absent)",
  "GMB": "(absent)",
  "GNB": "(absent)",
  "GNQ": "(absent)",
  "GRC": [
    "dates own dates | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-25 |  | Compare with other places -> /target-dates?in=GRC",
  ],
  "GRD": "(absent)",
  "GTM": "(absent)",
  "GUY": "(no-record)",
  "HND": "(absent)",
  "HRV": [
    "dates own dates | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-14 |  | Compare with other places -> /target-dates?in=HRV",
  ],
  "HTI": "(absent)",
  "HUN": [
    "dates own dates | 3 dates on its migration timeline, 2025 to 2035. | 3 | 2026-06-25 |  | Compare with other places -> /target-dates?in=HUN",
  ],
  "IDN": "(no-record)",
  "IND": [
    "dates own dates | 3 dates on its migration timeline, 2029 to 2035. | 3 | 2026-06-25 |  | Compare with other places -> /target-dates?in=IND",
  ],
  "IRL": [
    "dates own dates | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-14 |  | Compare with other places -> /target-dates?in=IRL",
  ],
  "IRN": "(absent)",
  "IRQ": "(absent)",
  "ISL": "(absent)",
  "ISR": [
    "dates own dates | 1 date on its migration timeline: 2026. | 1 | 2026-06-25 |  | Compare with other places -> /target-dates?in=ISR",
  ],
  "ITA": [
    "dates own dates | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-25 |  | Compare with other places -> /target-dates?in=ITA",
  ],
  "JAM": "(absent)",
  "JOR": "(absent)",
  "JPN": [
    "dates own dates | 2 dates on its migration timeline, 2026 to 2035. | 2 | 2026-06-25 |  | Compare with other places -> /target-dates?in=JPN",
  ],
  "KAZ": "(absent)",
  "KEN": "(absent)",
  "KGZ": "(absent)",
  "KHM": "(absent)",
  "KIR": "(absent)",
  "KNA": "(absent)",
  "KOR": [
    "dates own dates | 3 dates on its migration timeline, 2025 to 2026. | 3 | 2026-06-25 |  | Compare with other places -> /target-dates?in=KOR",
  ],
  "KWT": "(absent)",
  "LAO": "(absent)",
  "LBN": "(absent)",
  "LBR": "(absent)",
  "LBY": "(absent)",
  "LCA": "(absent)",
  "LIE": "(absent)",
  "LKA": "(absent)",
  "LSO": "(absent)",
  "LTU": [
    "dates own dates | 3 dates on its migration timeline, 2027 to 2036. | 3 | 2026-06-25 |  | Compare with other places -> /target-dates?in=LTU",
  ],
  "LUX": [
    "dates own dates | 1 date on its migration timeline: 2030. | 1 | 2026-06-25 |  | Compare with other places -> /target-dates?in=LUX",
  ],
  "LVA": [
    "dates own dates | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-14 |  | Compare with other places -> /target-dates?in=LVA",
  ],
  "MAR": "(absent)",
  "MCO": "(absent)",
  "MDA": "(absent)",
  "MDG": "(absent)",
  "MDV": "(absent)",
  "MEX": "(absent)",
  "MHL": "(absent)",
  "MKD": "(absent)",
  "MLI": "(absent)",
  "MLT": [
    "dates membership dates | As an EU Member State, Malta is addressed by the EU roadmap, with 3 target dates, 2026 to 2035. | 3 | 2026-10-01 |  | Compare with other places -> /target-dates?in=MLT",
  ],
  "MMR": "(absent)",
  "MNE": "(absent)",
  "MNG": "(absent)",
  "MOZ": "(absent)",
  "MRT": "(absent)",
  "MUS": "(absent)",
  "MWI": "(absent)",
  "MYS": "(no-record)",
  "NAM": "(absent)",
  "NATO": [
    "dates own dates | 2 dates on its migration timeline, 2022 to 2024. | 2 | no date |  | Compare with other places -> /target-dates?in=NATO",
  ],
  "NER": "(absent)",
  "NGA": "(absent)",
  "NIC": "(absent)",
  "NLD": [
    "dates own dates | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-25 |  | Compare with other places -> /target-dates?in=NLD",
  ],
  "NOR": [
    "dates own dates | 3 dates on its migration timeline, 2017 to 2025. | 3 | 2026-06-25 |  | Compare with other places -> /target-dates?in=NOR",
  ],
  "NPL": "(absent)",
  "NRU": "(absent)",
  "NZL": [
    "dates own dates | 1 date on its migration timeline: 2026. | 1 | 2026-06-25 |  | Compare with other places -> /target-dates?in=NZL",
  ],
  "OMN": "(absent)",
  "PAK": "(absent)",
  "PAN": "(absent)",
  "PER": "(absent)",
  "PHL": "(absent)",
  "PLW": "(absent)",
  "PNG": "(absent)",
  "POL": [
    "dates own dates | 3 dates on its migration timeline, 2026 to 2035. | 3 | 2026-06-25 |  | Compare with other places -> /target-dates?in=POL",
  ],
  "PRK": "(absent)",
  "PRT": [
    "dates own dates | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-25 |  | Compare with other places -> /target-dates?in=PRT",
  ],
  "PRY": "(absent)",
  "QAT": "(absent)",
  "ROU": [
    "dates own dates | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-25 |  | Compare with other places -> /target-dates?in=ROU",
  ],
  "RUS": "(no-record)",
  "RWA": "(absent)",
  "SAU": "(no-record)",
  "SDN": "(absent)",
  "SEN": "(absent)",
  "SGP": [
    "dates own dates | 3 dates on its migration timeline, 2023 to 2026. | 3 | 2026-06-25 |  | Compare with other places -> /target-dates?in=SGP",
  ],
  "SLB": "(absent)",
  "SLE": "(absent)",
  "SLV": "(absent)",
  "SMR": "(absent)",
  "SOM": "(absent)",
  "SRB": "(absent)",
  "SSD": "(absent)",
  "STP": "(absent)",
  "SUR": "(absent)",
  "SVK": [
    "dates membership dates | As an EU Member State, Slovakia is addressed by the EU roadmap, with 3 target dates, 2026 to 2035. | 3 | 2026-10-01 |  | Compare with other places -> /target-dates?in=SVK",
  ],
  "SVN": [
    "dates own dates | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-25 |  | Compare with other places -> /target-dates?in=SVN",
  ],
  "SWE": [
    "dates own dates | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-25 |  | Compare with other places -> /target-dates?in=SWE",
  ],
  "SWZ": "(absent)",
  "SYC": "(absent)",
  "SYR": "(absent)",
  "TCD": "(absent)",
  "TGO": "(absent)",
  "THA": [
    "dates own dates | 5 dates on its migration timeline, 2026 to 2035. | 5 | 2026-06-25 |  | Compare with other places -> /target-dates?in=THA",
  ],
  "TJK": "(absent)",
  "TKM": "(absent)",
  "TLS": "(absent)",
  "TON": "(absent)",
  "TTO": "(absent)",
  "TUN": "(absent)",
  "TUR": "(no-record)",
  "TUV": "(absent)",
  "TZA": "(absent)",
  "UGA": "(absent)",
  "UKR": "(no-record)",
  "UNK": "(absent)",
  "URY": "(no-record)",
  "USA": "(no-record)",
  "UZB": "(absent)",
  "VAT": "(absent)",
  "VCT": "(absent)",
  "VEN": "(absent)",
  "VNM": [
    "dates own dates | 3 dates on its migration timeline, 2026 to 2030. | 3 | 2026-06-25 |  | Compare with other places -> /target-dates?in=VNM",
  ],
  "VUT": "(absent)",
  "WSM": "(absent)",
  "YEM": "(absent)",
  "ZAF": "(absent)",
  "ZMB": "(absent)",
  "ZWE": "(absent)",
}
`;

exports[`connectedEvidence snapshot, seven flag states > exposure alone 1`] = `
{
  "AFG": "(absent)",
  "AGO": "(absent)",
  "ALB": "(absent)",
  "AND": "(absent)",
  "ARE": [
    "dates own exposure | 2 dates on its migration timeline, 2025 to 2026. | 2 | 2026-06-25 |  | Set against how long data must stay secret -> /prepare/exposure?j=ARE",
  ],
  "ARG": "(no-record)",
  "ARM": "(absent)",
  "ATG": "(absent)",
  "AUS": [
    "dates own exposure | 3 dates on its migration timeline, 2026 to 2030. | 3 | 2026-06-25 |  | Set against how long data must stay secret -> /prepare/exposure?j=AUS",
  ],
  "AUT": [
    "dates membership exposure | As an EU Member State, Austria is addressed by the EU roadmap, with 3 target dates, 2026 to 2035. | 3 | 2026-10-01 |  | Set against how long data must stay secret -> /prepare/exposure?j=EUU",
  ],
  "AZE": "(absent)",
  "BDI": "(absent)",
  "BEL": [
    "dates own exposure | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-25 |  | Set against how long data must stay secret -> /prepare/exposure?j=BEL",
  ],
  "BEN": "(absent)",
  "BFA": "(absent)",
  "BGD": "(absent)",
  "BGR": [
    "dates membership exposure | As an EU Member State, Bulgaria is addressed by the EU roadmap, with 3 target dates, 2026 to 2035. | 3 | 2026-10-01 |  | Set against how long data must stay secret -> /prepare/exposure?j=EUU",
  ],
  "BHR": "(no-record)",
  "BHS": "(absent)",
  "BIH": "(absent)",
  "BLR": "(absent)",
  "BLZ": "(absent)",
  "BOL": "(absent)",
  "BRA": [
    "dates own exposure | 2 dates on its migration timeline, all in 2026. | 2 | 2026-06-14 |  | Set against how long data must stay secret -> /prepare/exposure?j=BRA",
  ],
  "BRB": "(absent)",
  "BRN": "(no-record)",
  "BTN": "(absent)",
  "BWA": "(absent)",
  "CAF": "(absent)",
  "CAN": [
    "dates own exposure | 3 dates on its migration timeline, 2026 to 2035. | 3 | 2026-06-25 |  | Set against how long data must stay secret -> /prepare/exposure?j=CAN",
  ],
  "CHE": "(no-record)",
  "CHL": "(no-record)",
  "CHN": "(no-record)",
  "CIV": "(absent)",
  "CMR": "(absent)",
  "COD": "(absent)",
  "COG": "(absent)",
  "COL": "(absent)",
  "COM": "(absent)",
  "CPV": "(absent)",
  "CRI": "(absent)",
  "CUB": "(absent)",
  "CYP": [
    "dates own exposure | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-14 |  | Set against how long data must stay secret -> /prepare/exposure?j=CYP",
  ],
  "CZE": [
    "dates own exposure | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-25 |  | Set against how long data must stay secret -> /prepare/exposure?j=CZE",
  ],
  "DEU": [
    "dates own exposure | 4 dates on its migration timeline, 2026 to 2035. | 4 | 2026-06-25 |  | Set against how long data must stay secret -> /prepare/exposure?j=DEU",
    "dates own exposure | Periods the Exposure Clock has read for Germany: tax records, identity and civil registry data, classified government information and financial transaction records. |  | 2026-10-04 | [tax records -> /prepare/exposure?c=tax-records&j=DEU] [identity and civil registry data -> /prepare/exposure?c=identity-registry&j=DEU] [classified government information -> /prepare/exposure?c=classified-government&j=DEU] [financial transaction records -> /prepare/exposure?c=financial-transactions&j=DEU] | ",
  ],
  "DJI": "(no-record)",
  "DMA": "(absent)",
  "DNK": [
    "dates own exposure | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-25 |  | Set against how long data must stay secret -> /prepare/exposure?j=DNK",
  ],
  "DOM": "(absent)",
  "DZA": "(absent)",
  "ECU": "(absent)",
  "EGY": "(absent)",
  "ERI": "(absent)",
  "ESP": [
    "dates own exposure | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-25 |  | Set against how long data must stay secret -> /prepare/exposure?j=ESP",
    "dates own exposure | Periods the Exposure Clock has read for Spain: citizen health records and law enforcement case files. |  | 2026-10-04 | [citizen health records -> /prepare/exposure?c=citizen-health-records&j=ESP] [law enforcement case files -> /prepare/exposure?c=law-enforcement&j=ESP] | ",
  ],
  "EST": [
    "dates membership exposure | As an EU Member State, Estonia is addressed by the EU roadmap, with 3 target dates, 2026 to 2035. | 3 | 2026-10-01 |  | Set against how long data must stay secret -> /prepare/exposure?j=EUU",
  ],
  "ETH": "(absent)",
  "EUU": [
    "dates own exposure | 3 target dates in the EU roadmap it publishes, 2026 to 2035. | 3 | 2026-10-01 |  | Set against how long data must stay secret -> /prepare/exposure?j=EUU",
    "dates own exposure | Periods the Exposure Clock has read for the European Union: diplomatic communications and financial transaction records. |  | 2026-10-04 | [diplomatic communications -> /prepare/exposure?c=diplomatic&j=EUU] [financial transaction records -> /prepare/exposure?c=financial-transactions&j=EUU] | ",
  ],
  "FIN": [
    "dates own exposure | 3 dates on its migration timeline, 2026 to 2035. | 3 | 2026-06-25 |  | Set against how long data must stay secret -> /prepare/exposure?j=FIN",
  ],
  "FJI": "(absent)",
  "FRA": [
    "dates own exposure | 3 dates on its migration timeline, 2022 to 2035. | 3 | 2026-06-25 |  | Set against how long data must stay secret -> /prepare/exposure?j=FRA",
    "dates own exposure | Periods the Exposure Clock has read for France: citizen health records, identity and civil registry data, classified government information, diplomatic communications and law enforcement case files. |  | 2026-10-04 | [citizen health records -> /prepare/exposure?c=citizen-health-records&j=FRA] [identity and civil registry data -> /prepare/exposure?c=identity-registry&j=FRA] [classified government information -> /prepare/exposure?c=classified-government&j=FRA] [diplomatic communications -> /prepare/exposure?c=diplomatic&j=FRA] [law enforcement case files -> /prepare/exposure?c=law-enforcement&j=FRA] | ",
  ],
  "FSM": "(absent)",
  "GAB": "(absent)",
  "GBR": [
    "dates own exposure | 3 dates on its migration timeline, 2028 to 2035. | 3 | 2026-06-25 |  | Set against how long data must stay secret -> /prepare/exposure?j=GBR",
    "dates own exposure | Periods the Exposure Clock has read for the United Kingdom: law enforcement case files. |  | 2026-10-04 | [law enforcement case files -> /prepare/exposure?c=law-enforcement&j=GBR] | ",
  ],
  "GEO": "(absent)",
  "GHA": "(absent)",
  "GIN": "(absent)",
  "GMB": "(absent)",
  "GNB": "(absent)",
  "GNQ": "(absent)",
  "GRC": [
    "dates own exposure | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-25 |  | Set against how long data must stay secret -> /prepare/exposure?j=GRC",
  ],
  "GRD": "(absent)",
  "GTM": "(absent)",
  "GUY": "(no-record)",
  "HND": "(absent)",
  "HRV": [
    "dates own exposure | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-14 |  | Set against how long data must stay secret -> /prepare/exposure?j=HRV",
  ],
  "HTI": "(absent)",
  "HUN": [
    "dates own exposure | 3 dates on its migration timeline, 2025 to 2035. | 3 | 2026-06-25 |  | Set against how long data must stay secret -> /prepare/exposure?j=HUN",
  ],
  "IDN": "(no-record)",
  "IND": [
    "dates own exposure | 3 dates on its migration timeline, 2029 to 2035. | 3 | 2026-06-25 |  | Set against how long data must stay secret -> /prepare/exposure?j=IND",
  ],
  "IRL": [
    "dates own exposure | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-14 |  | Set against how long data must stay secret -> /prepare/exposure?j=IRL",
  ],
  "IRN": "(absent)",
  "IRQ": "(absent)",
  "ISL": "(absent)",
  "ISR": [
    "dates own exposure | 1 date on its migration timeline: 2026. | 1 | 2026-06-25 |  | Set against how long data must stay secret -> /prepare/exposure?j=ISR",
  ],
  "ITA": [
    "dates own exposure | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-25 |  | Set against how long data must stay secret -> /prepare/exposure?j=ITA",
    "dates own exposure | Periods the Exposure Clock has read for Italy: citizen health records, diplomatic communications and law enforcement case files. |  | 2026-10-04 | [citizen health records -> /prepare/exposure?c=citizen-health-records&j=ITA] [diplomatic communications -> /prepare/exposure?c=diplomatic&j=ITA] [law enforcement case files -> /prepare/exposure?c=law-enforcement&j=ITA] | ",
  ],
  "JAM": "(absent)",
  "JOR": "(absent)",
  "JPN": [
    "dates own exposure | 2 dates on its migration timeline, 2026 to 2035. | 2 | 2026-06-25 |  | Set against how long data must stay secret -> /prepare/exposure?j=JPN",
  ],
  "KAZ": "(absent)",
  "KEN": "(absent)",
  "KGZ": "(absent)",
  "KHM": "(absent)",
  "KIR": "(absent)",
  "KNA": "(absent)",
  "KOR": [
    "dates own exposure | 3 dates on its migration timeline, 2025 to 2026. | 3 | 2026-06-25 |  | Set against how long data must stay secret -> /prepare/exposure?j=KOR",
  ],
  "KWT": "(absent)",
  "LAO": "(absent)",
  "LBN": "(absent)",
  "LBR": "(absent)",
  "LBY": "(absent)",
  "LCA": "(absent)",
  "LIE": "(absent)",
  "LKA": "(absent)",
  "LSO": "(absent)",
  "LTU": [
    "dates own exposure | 3 dates on its migration timeline, 2027 to 2036. | 3 | 2026-06-25 |  | Set against how long data must stay secret -> /prepare/exposure?j=LTU",
  ],
  "LUX": [
    "dates own exposure | 1 date on its migration timeline: 2030. | 1 | 2026-06-25 |  | Set against how long data must stay secret -> /prepare/exposure?j=LUX",
  ],
  "LVA": [
    "dates own exposure | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-14 |  | Set against how long data must stay secret -> /prepare/exposure?j=LVA",
  ],
  "MAR": "(absent)",
  "MCO": "(absent)",
  "MDA": "(absent)",
  "MDG": "(absent)",
  "MDV": "(absent)",
  "MEX": "(absent)",
  "MHL": "(absent)",
  "MKD": "(absent)",
  "MLI": "(absent)",
  "MLT": [
    "dates membership exposure | As an EU Member State, Malta is addressed by the EU roadmap, with 3 target dates, 2026 to 2035. | 3 | 2026-10-01 |  | Set against how long data must stay secret -> /prepare/exposure?j=EUU",
  ],
  "MMR": "(absent)",
  "MNE": "(absent)",
  "MNG": "(absent)",
  "MOZ": "(absent)",
  "MRT": "(absent)",
  "MUS": "(absent)",
  "MWI": "(absent)",
  "MYS": "(no-record)",
  "NAM": "(absent)",
  "NATO": "(no-record)",
  "NER": "(absent)",
  "NGA": "(absent)",
  "NIC": "(absent)",
  "NLD": [
    "dates own exposure | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-25 |  | Set against how long data must stay secret -> /prepare/exposure?j=NLD",
  ],
  "NOR": [
    "dates own exposure | 3 dates on its migration timeline, 2017 to 2025. | 3 | 2026-06-25 |  | Set against how long data must stay secret -> /prepare/exposure?j=NOR",
  ],
  "NPL": "(absent)",
  "NRU": "(absent)",
  "NZL": [
    "dates own exposure | 1 date on its migration timeline: 2026. | 1 | 2026-06-25 |  | Set against how long data must stay secret -> /prepare/exposure?j=NZL",
  ],
  "OMN": "(absent)",
  "PAK": "(absent)",
  "PAN": "(absent)",
  "PER": "(absent)",
  "PHL": "(absent)",
  "PLW": "(absent)",
  "PNG": "(absent)",
  "POL": [
    "dates own exposure | 3 dates on its migration timeline, 2026 to 2035. | 3 | 2026-06-25 |  | Set against how long data must stay secret -> /prepare/exposure?j=POL",
  ],
  "PRK": "(absent)",
  "PRT": [
    "dates own exposure | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-25 |  | Set against how long data must stay secret -> /prepare/exposure?j=PRT",
  ],
  "PRY": "(absent)",
  "QAT": "(absent)",
  "ROU": [
    "dates own exposure | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-25 |  | Set against how long data must stay secret -> /prepare/exposure?j=ROU",
  ],
  "RUS": "(no-record)",
  "RWA": "(absent)",
  "SAU": "(no-record)",
  "SDN": "(absent)",
  "SEN": "(absent)",
  "SGP": [
    "dates own exposure | 3 dates on its migration timeline, 2023 to 2026. | 3 | 2026-06-25 |  | Set against how long data must stay secret -> /prepare/exposure?j=SGP",
  ],
  "SLB": "(absent)",
  "SLE": "(absent)",
  "SLV": "(absent)",
  "SMR": "(absent)",
  "SOM": "(absent)",
  "SRB": "(absent)",
  "SSD": "(absent)",
  "STP": "(absent)",
  "SUR": "(absent)",
  "SVK": [
    "dates membership exposure | As an EU Member State, Slovakia is addressed by the EU roadmap, with 3 target dates, 2026 to 2035. | 3 | 2026-10-01 |  | Set against how long data must stay secret -> /prepare/exposure?j=EUU",
  ],
  "SVN": [
    "dates own exposure | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-25 |  | Set against how long data must stay secret -> /prepare/exposure?j=SVN",
  ],
  "SWE": [
    "dates own exposure | 2 dates on its migration timeline, 2030 to 2035. | 2 | 2026-06-25 |  | Set against how long data must stay secret -> /prepare/exposure?j=SWE",
  ],
  "SWZ": "(absent)",
  "SYC": "(absent)",
  "SYR": "(absent)",
  "TCD": "(absent)",
  "TGO": "(absent)",
  "THA": [
    "dates own exposure | 5 dates on its migration timeline, 2026 to 2035. | 5 | 2026-06-25 |  | Set against how long data must stay secret -> /prepare/exposure?j=THA",
  ],
  "TJK": "(absent)",
  "TKM": "(absent)",
  "TLS": "(absent)",
  "TON": "(absent)",
  "TTO": "(absent)",
  "TUN": "(absent)",
  "TUR": "(no-record)",
  "TUV": "(absent)",
  "TZA": "(absent)",
  "UGA": "(absent)",
  "UKR": "(no-record)",
  "UNK": "(absent)",
  "URY": "(no-record)",
  "USA": [
    "dates own exposure | 4 dates on its migration timeline, 2025 to 2035. | 4 | 2026-06-25 |  | Set against how long data must stay secret -> /prepare/exposure?j=USA",
    "dates own exposure | Periods the Exposure Clock has read for the United States: citizen health records and classified government information. |  | 2026-10-04 | [citizen health records -> /prepare/exposure?c=citizen-health-records&j=USA] [classified government information -> /prepare/exposure?c=classified-government&j=USA] | ",
  ],
  "UZB": "(absent)",
  "VAT": "(absent)",
  "VCT": "(absent)",
  "VEN": "(absent)",
  "VNM": [
    "dates own exposure | 3 dates on its migration timeline, 2026 to 2030. | 3 | 2026-06-25 |  | Set against how long data must stay secret -> /prepare/exposure?j=VNM",
  ],
  "VUT": "(absent)",
  "WSM": "(absent)",
  "YEM": "(absent)",
  "ZAF": "(absent)",
  "ZMB": "(absent)",
  "ZWE": "(absent)",
}
`;

exports[`connectedEvidence snapshot, seven flag states > readiness alone 1`] = `
{
  "AFG": "(absent)",
  "AGO": "(absent)",
  "ALB": "(absent)",
  "AND": "(absent)",
  "ARE": "(no-record)",
  "ARG": "(no-record)",
  "ARM": "(absent)",
  "ATG": "(absent)",
  "AUS": "(no-record)",
  "AUT": [
    "guidance membership readiness | As an EU Member State, Austria is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "AZE": "(absent)",
  "BDI": "(absent)",
  "BEL": [
    "guidance membership readiness | As an EU Member State, Belgium is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "BEN": "(absent)",
  "BFA": "(absent)",
  "BGD": "(absent)",
  "BGR": [
    "guidance membership readiness | As an EU Member State, Bulgaria is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "BHR": "(no-record)",
  "BHS": "(absent)",
  "BIH": "(absent)",
  "BLR": "(absent)",
  "BLZ": "(absent)",
  "BOL": "(absent)",
  "BRA": "(no-record)",
  "BRB": "(absent)",
  "BRN": "(no-record)",
  "BTN": "(absent)",
  "BWA": "(absent)",
  "CAF": "(absent)",
  "CAN": [
    "guidance own readiness | Publishes the Canadian roadmap, quoted in 7 actions of the Readiness Check. | 7 | 2026-10-01 |  | Read the guide -> /prepare/guides/ca-roadmap ; Mark these actions -> /prepare/check#f=ca-roadmap",
  ],
  "CHE": "(no-record)",
  "CHL": "(no-record)",
  "CHN": "(no-record)",
  "CIV": "(absent)",
  "CMR": "(absent)",
  "COD": "(absent)",
  "COG": "(absent)",
  "COL": "(absent)",
  "COM": "(absent)",
  "CPV": "(absent)",
  "CRI": "(absent)",
  "CUB": "(absent)",
  "CYP": [
    "guidance membership readiness | As an EU Member State, Cyprus is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "CZE": [
    "guidance membership readiness | As an EU Member State, Czechia is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "DEU": [
    "guidance membership readiness | As an EU Member State, Germany is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "DJI": "(no-record)",
  "DMA": "(absent)",
  "DNK": [
    "guidance membership readiness | As an EU Member State, Denmark is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "DOM": "(absent)",
  "DZA": "(absent)",
  "ECU": "(absent)",
  "EGY": "(absent)",
  "ERI": "(absent)",
  "ESP": [
    "guidance membership readiness | As an EU Member State, Spain is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "EST": [
    "guidance membership readiness | As an EU Member State, Estonia is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "ETH": "(absent)",
  "EUU": [
    "guidance own readiness | Publishes the EU roadmap, quoted in 12 actions of the Readiness Check. | 12 | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "FIN": [
    "guidance membership readiness | As an EU Member State, Finland is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "FJI": "(absent)",
  "FRA": [
    "guidance own readiness | Publishes the ANSSI FAQ, quoted in 2 actions of the Readiness Check. | 2 | 2026-10-01 |  | Read the guide -> /prepare/guides/anssi-faq ; Mark these actions -> /prepare/check#f=anssi-faq",
    "guidance membership readiness | As an EU Member State, France is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "FSM": "(absent)",
  "GAB": "(absent)",
  "GBR": [
    "guidance own readiness | Publishes the NCSC timelines, quoted in 11 actions of the Readiness Check. | 11 | 2026-10-01 |  | Read the guide -> /prepare/guides/ncsc-timelines ; Mark these actions -> /prepare/check#f=ncsc-timelines",
    "guidance own readiness | Publishes the NCSC next steps, quoted in 1 action of the Readiness Check. | 1 | 2026-10-01 |  | Read the guide -> /prepare/guides/ncsc-next-steps ; Mark these actions -> /prepare/check#f=ncsc-next-steps",
  ],
  "GEO": "(absent)",
  "GHA": "(absent)",
  "GIN": "(absent)",
  "GMB": "(absent)",
  "GNB": "(absent)",
  "GNQ": "(absent)",
  "GRC": [
    "guidance membership readiness | As an EU Member State, Greece is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "GRD": "(absent)",
  "GTM": "(absent)",
  "GUY": "(no-record)",
  "HND": "(absent)",
  "HRV": [
    "guidance membership readiness | As an EU Member State, Croatia is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "HTI": "(absent)",
  "HUN": [
    "guidance membership readiness | As an EU Member State, Hungary is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "IDN": "(no-record)",
  "IND": "(no-record)",
  "IRL": [
    "guidance membership readiness | As an EU Member State, Ireland is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "IRN": "(absent)",
  "IRQ": "(absent)",
  "ISL": "(absent)",
  "ISR": "(no-record)",
  "ITA": [
    "guidance membership readiness | As an EU Member State, Italy is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "JAM": "(absent)",
  "JOR": "(absent)",
  "JPN": "(no-record)",
  "KAZ": "(absent)",
  "KEN": "(absent)",
  "KGZ": "(absent)",
  "KHM": "(absent)",
  "KIR": "(absent)",
  "KNA": "(absent)",
  "KOR": "(no-record)",
  "KWT": "(absent)",
  "LAO": "(absent)",
  "LBN": "(absent)",
  "LBR": "(absent)",
  "LBY": "(absent)",
  "LCA": "(absent)",
  "LIE": "(absent)",
  "LKA": "(absent)",
  "LSO": "(absent)",
  "LTU": [
    "guidance membership readiness | As an EU Member State, Lithuania is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "LUX": [
    "guidance membership readiness | As an EU Member State, Luxembourg is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "LVA": [
    "guidance membership readiness | As an EU Member State, Latvia is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "MAR": "(absent)",
  "MCO": "(absent)",
  "MDA": "(absent)",
  "MDG": "(absent)",
  "MDV": "(absent)",
  "MEX": "(absent)",
  "MHL": "(absent)",
  "MKD": "(absent)",
  "MLI": "(absent)",
  "MLT": [
    "guidance membership readiness | As an EU Member State, Malta is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "MMR": "(absent)",
  "MNE": "(absent)",
  "MNG": "(absent)",
  "MOZ": "(absent)",
  "MRT": "(absent)",
  "MUS": "(absent)",
  "MWI": "(absent)",
  "MYS": "(no-record)",
  "NAM": "(absent)",
  "NATO": "(no-record)",
  "NER": "(absent)",
  "NGA": "(absent)",
  "NIC": "(absent)",
  "NLD": [
    "guidance own readiness | Publishes the Dutch Handbook, quoted in 5 actions of the Readiness Check. | 5 | 2026-10-01 |  | Read the guide -> /prepare/guides/nl-handbook ; Mark these actions -> /prepare/check#f=nl-handbook",
    "guidance membership readiness | As an EU Member State, the Netherlands is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "NOR": "(no-record)",
  "NPL": "(absent)",
  "NRU": "(absent)",
  "NZL": "(no-record)",
  "OMN": "(absent)",
  "PAK": "(absent)",
  "PAN": "(absent)",
  "PER": "(absent)",
  "PHL": "(absent)",
  "PLW": "(absent)",
  "PNG": "(absent)",
  "POL": [
    "guidance membership readiness | As an EU Member State, Poland is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "PRK": "(absent)",
  "PRT": [
    "guidance membership readiness | As an EU Member State, Portugal is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "PRY": "(absent)",
  "QAT": "(absent)",
  "ROU": [
    "guidance membership readiness | As an EU Member State, Romania is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "RUS": "(no-record)",
  "RWA": "(absent)",
  "SAU": "(no-record)",
  "SDN": "(absent)",
  "SEN": "(absent)",
  "SGP": "(no-record)",
  "SLB": "(absent)",
  "SLE": "(absent)",
  "SLV": "(absent)",
  "SMR": "(absent)",
  "SOM": "(absent)",
  "SRB": "(absent)",
  "SSD": "(absent)",
  "STP": "(absent)",
  "SUR": "(absent)",
  "SVK": [
    "guidance membership readiness | As an EU Member State, Slovakia is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "SVN": [
    "guidance membership readiness | As an EU Member State, Slovenia is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "SWE": [
    "guidance membership readiness | As an EU Member State, Sweden is addressed by the EU coordinated roadmap; its targets for end 2026, 2030 and 2035 are recommendations. |  | 2026-10-01 |  | Read the guide -> /prepare/guides/eu-roadmap ; Mark these actions -> /prepare/check#f=eu-roadmap",
  ],
  "SWZ": "(absent)",
  "SYC": "(absent)",
  "SYR": "(absent)",
  "TCD": "(absent)",
  "TGO": "(absent)",
  "THA": "(no-record)",
  "TJK": "(absent)",
  "TKM": "(absent)",
  "TLS": "(absent)",
  "TON": "(absent)",
  "TTO": "(absent)",
  "TUN": "(absent)",
  "TUR": "(no-record)",
  "TUV": "(absent)",
  "TZA": "(absent)",
  "UGA": "(absent)",
  "UKR": "(no-record)",
  "UNK": "(absent)",
  "URY": "(no-record)",
  "USA": [
    "guidance own readiness | Publishes the CISA, NSA and NIST factsheet, quoted in 3 actions of the Readiness Check. | 3 | 2026-10-01 |  | Read the guide -> /prepare/guides/cisa-factsheet ; Mark these actions -> /prepare/check#f=cisa-factsheet",
  ],
  "UZB": "(absent)",
  "VAT": "(absent)",
  "VCT": "(absent)",
  "VEN": "(absent)",
  "VNM": "(no-record)",
  "VUT": "(absent)",
  "WSM": "(absent)",
  "YEM": "(absent)",
  "ZAF": "(absent)",
  "ZMB": "(absent)",
  "ZWE": "(absent)",
}
`;

exports[`connectedEvidence snapshot, seven flag states > rulebook alone 1`] = `
{
  "AFG": "(absent)",
  "AGO": "(absent)",
  "ALB": "(absent)",
  "AND": "(absent)",
  "ARE": "(absent)",
  "ARG": "(absent)",
  "ARM": "(absent)",
  "ATG": "(absent)",
  "AUS": "(absent)",
  "AUT": "(absent)",
  "AZE": "(absent)",
  "BDI": "(absent)",
  "BEL": "(absent)",
  "BEN": "(absent)",
  "BFA": "(absent)",
  "BGD": "(absent)",
  "BGR": "(absent)",
  "BHR": "(absent)",
  "BHS": "(absent)",
  "BIH": "(absent)",
  "BLR": "(absent)",
  "BLZ": "(absent)",
  "BOL": "(absent)",
  "BRA": "(absent)",
  "BRB": "(absent)",
  "BRN": "(absent)",
  "BTN": "(absent)",
  "BWA": "(absent)",
  "CAF": "(absent)",
  "CAN": "(absent)",
  "CHE": "(absent)",
  "CHL": "(absent)",
  "CHN": "(absent)",
  "CIV": "(absent)",
  "CMR": "(absent)",
  "COD": "(absent)",
  "COG": "(absent)",
  "COL": "(absent)",
  "COM": "(absent)",
  "CPV": "(absent)",
  "CRI": "(absent)",
  "CUB": "(absent)",
  "CYP": "(absent)",
  "CZE": "(absent)",
  "DEU": "(absent)",
  "DJI": "(absent)",
  "DMA": "(absent)",
  "DNK": "(absent)",
  "DOM": "(absent)",
  "DZA": "(absent)",
  "ECU": "(absent)",
  "EGY": "(absent)",
  "ERI": "(absent)",
  "ESP": "(absent)",
  "EST": "(absent)",
  "ETH": "(absent)",
  "EUU": "(absent)",
  "FIN": "(absent)",
  "FJI": "(absent)",
  "FRA": "(absent)",
  "FSM": "(absent)",
  "GAB": "(absent)",
  "GBR": "(absent)",
  "GEO": "(absent)",
  "GHA": "(absent)",
  "GIN": "(absent)",
  "GMB": "(absent)",
  "GNB": "(absent)",
  "GNQ": "(absent)",
  "GRC": "(absent)",
  "GRD": "(absent)",
  "GTM": "(absent)",
  "GUY": "(absent)",
  "HND": "(absent)",
  "HRV": "(absent)",
  "HTI": "(absent)",
  "HUN": "(absent)",
  "IDN": "(absent)",
  "IND": "(absent)",
  "IRL": "(absent)",
  "IRN": "(absent)",
  "IRQ": "(absent)",
  "ISL": "(absent)",
  "ISR": "(absent)",
  "ITA": "(absent)",
  "JAM": "(absent)",
  "JOR": "(absent)",
  "JPN": "(absent)",
  "KAZ": "(absent)",
  "KEN": "(absent)",
  "KGZ": "(absent)",
  "KHM": "(absent)",
  "KIR": "(absent)",
  "KNA": "(absent)",
  "KOR": "(absent)",
  "KWT": "(absent)",
  "LAO": "(absent)",
  "LBN": "(absent)",
  "LBR": "(absent)",
  "LBY": "(absent)",
  "LCA": "(absent)",
  "LIE": "(absent)",
  "LKA": "(absent)",
  "LSO": "(absent)",
  "LTU": "(absent)",
  "LUX": "(absent)",
  "LVA": "(absent)",
  "MAR": "(absent)",
  "MCO": "(absent)",
  "MDA": "(absent)",
  "MDG": "(absent)",
  "MDV": "(absent)",
  "MEX": "(absent)",
  "MHL": "(absent)",
  "MKD": "(absent)",
  "MLI": "(absent)",
  "MLT": "(absent)",
  "MMR": "(absent)",
  "MNE": "(absent)",
  "MNG": "(absent)",
  "MOZ": "(absent)",
  "MRT": "(absent)",
  "MUS": "(absent)",
  "MWI": "(absent)",
  "MYS": "(absent)",
  "NAM": "(absent)",
  "NATO": "(absent)",
  "NER": "(absent)",
  "NGA": "(absent)",
  "NIC": "(absent)",
  "NLD": "(absent)",
  "NOR": "(absent)",
  "NPL": "(absent)",
  "NRU": "(absent)",
  "NZL": "(absent)",
  "OMN": "(absent)",
  "PAK": "(absent)",
  "PAN": "(absent)",
  "PER": "(absent)",
  "PHL": "(absent)",
  "PLW": "(absent)",
  "PNG": "(absent)",
  "POL": "(absent)",
  "PRK": "(absent)",
  "PRT": "(absent)",
  "PRY": "(absent)",
  "QAT": "(absent)",
  "ROU": "(absent)",
  "RUS": "(absent)",
  "RWA": "(absent)",
  "SAU": "(absent)",
  "SDN": "(absent)",
  "SEN": "(absent)",
  "SGP": "(absent)",
  "SLB": "(absent)",
  "SLE": "(absent)",
  "SLV": "(absent)",
  "SMR": "(absent)",
  "SOM": "(absent)",
  "SRB": "(absent)",
  "SSD": "(absent)",
  "STP": "(absent)",
  "SUR": "(absent)",
  "SVK": "(absent)",
  "SVN": "(absent)",
  "SWE": "(absent)",
  "SWZ": "(absent)",
  "SYC": "(absent)",
  "SYR": "(absent)",
  "TCD": "(absent)",
  "TGO": "(absent)",
  "THA": "(absent)",
  "TJK": "(absent)",
  "TKM": "(absent)",
  "TLS": "(absent)",
  "TON": "(absent)",
  "TTO": "(absent)",
  "TUN": "(absent)",
  "TUR": "(absent)",
  "TUV": "(absent)",
  "TZA": "(absent)",
  "UGA": "(absent)",
  "UKR": "(absent)",
  "UNK": "(absent)",
  "URY": "(absent)",
  "USA": "(absent)",
  "UZB": "(absent)",
  "VAT": "(absent)",
  "VCT": "(absent)",
  "VEN": "(absent)",
  "VNM": "(absent)",
  "VUT": "(absent)",
  "WSM": "(absent)",
  "YEM": "(absent)",
  "ZAF": "(absent)",
  "ZMB": "(absent)",
  "ZWE": "(absent)",
}
`;
